--- a/data-engineering-zoomcamp-gcp/01-docker-terraform/2_docker_sql/upload-data.ipynb
+++ b/data-engineering-zoomcamp-gcp/01-docker-terraform/2_docker_sql/upload-data.ipynb
@@ -35,10 +35,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e865ee80-8745-4e9a-933e-ce83aa00dbd5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2024-01-21 10:00:00--  https://github.com/DataTalksClub/nyc-tlc-data/releases/download/yellow/yellow_tripdata_2021-01.csv.gz\n",
+      "Resolving github.com (github.com)... 140.82.121.4\n",
+      "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/513814948/f6895842-79e6-4a43-9458-e5b0b454a340?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240121%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240121T100001Z&X-Amz-Expires=300&X-Amz-Signature=9851cece99fc780dc53e3c4f1ed254e76ef27cd8862f96b0924e4efe43fb33df&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=513814948&response-content-disposition=attachment%3B%20filename%3Dyellow_tripdata_2021-01.csv.gz&response-content-type=application%2Foctet-stream [following]\n",
+      "--2024-01-21 10:00:01--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/513814948/f6895842-79e6-4a43-9458-e5b0b454a340?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240121%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240121T100001Z&X-Amz-Expires=300&X-Amz-Signature=9851cece99fc780dc53e3c4f1ed254e76ef27cd8862f96b0924e4efe43fb33df&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=513814948&response-content-disposition=attachment%3B%20filename%3Dyellow_tripdata_2021-01.csv.gz&response-content-type=application%2Foctet-stream\n",
+      "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.109.133, ...\n",
+      "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 25031880 (24M) [application/octet-stream]\n",
+      "Saving to: ‘yellow_tripdata_2021-01.csv.gz’\n",
+      "\n",
+      "yellow_tripdata_202 100%[===================>]  23.87M  81.1MB/s    in 0.3s    \n",
+      "\n",
+      "2024-01-21 10:00:01 (81.1 MB/s) - ‘yellow_tripdata_2021-01.csv.gz’ saved [25031880/25031880]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# !wget \"https://github.com/DataTalksClub/nyc-tlc-data/releases/download/yellow/yellow_tripdata_2021-01.csv.gz\""
    ]
