--- a/data-engineering-zoomcamp-gcp/01-docker-terraform/2_docker_sql/upload-data-HW01.ipynb
+++ b/data-engineering-zoomcamp-gcp/01-docker-terraform/2_docker_sql/upload-data-HW01.ipynb
@@ -938,9 +938,20 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1c4e7f55-733f-4ddc-8a7b-91bc94f7a924",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "df33b2f9-a6ce-49c4-9a7d-81b53cc9b2bd",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 24)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m<tokenize>:24\u001b[0;36m\u001b[0m\n\u001b[0;31m    AND\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "SELECT\n",
     "\t*\n",
@@ -1065,8 +1076,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f6998631-1abe-4040-88ac-732a4a0c83f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a57a086-c977-4f3a-a66e-643fac74e9d6",
    "metadata": {},
    "outputs": [],
    "source": []
