--- a/data-engineering-zoomcamp-gcp/05-batch/code/homework.ipynb
+++ b/data-engineering-zoomcamp-gcp/05-batch/code/homework.ipynb
@@ -2,7 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
+   "id": "fd4bb568-e4d1-4104-98cc-a4fca8e41df9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "539d70fc-49a8-445c-9eda-fcd9991bacc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/pd2669/data-engineering-zoomcamp-gcp/05-batch/code'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "00bc6543",
    "metadata": {},
    "outputs": [],
@@ -14,26 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "cd4a0f3d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/jars/spark-unsafe_2.12-3.0.3.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/03/07 21:55:48 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "    .master(\"local[*]\") \\\n",
@@ -43,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "eb3e4c36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'3.0.3'"
+       "'3.5.1'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
+   "id": "223da820-6fdf-46e4-a77a-b474f91fb03f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 19M\n",
+      "-rw-rw-r-- 1 pd2669 pd2669 19M Mar  2 19:48 fhv_tripdata_2019-10.csv.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -lh ./data/raw/fhv/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "5236cebd",
    "metadata": {},
    "outputs": [
@@ -72,68 +106,130 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 alexey alexey 700M Oct 29 18:53 fhvhv_tripdata_2021-02.csv\r\n"
+      "-rw-rw-r-- 1 pd2669 pd2669 19M Mar  2 19:48 ./data/raw/fhv/fhv_tripdata_2019-10.csv.gz\n"
      ]
     }
    ],
    "source": [
-    "!ls -lh fhvhv_tripdata_2021-02.csv"
+    "!ls -lh ./data/raw/fhv/fhv_tripdata_2019-10.csv.gz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "0a3399a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "schema = types.StructType([\n",
-    "    types.StructField('hvfhs_license_num', types.StringType(), True),\n",
     "    types.StructField('dispatching_base_num', types.StringType(), True),\n",
     "    types.StructField('pickup_datetime', types.TimestampType(), True),\n",
     "    types.StructField('dropoff_datetime', types.TimestampType(), True),\n",
     "    types.StructField('PULocationID', types.IntegerType(), True),\n",
     "    types.StructField('DOLocationID', types.IntegerType(), True),\n",
     "    types.StructField('SR_Flag', types.StringType(), True)\n",
+    "    types.StructField('hvfhs_license_num', types.StringType(), True),\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "68bc8b72",
+   "execution_count": 44,
+   "id": "ec467674-abfa-4cca-a8e3-8935c5468a18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read \\\n",
-    "    .option(\"header\", \"true\") \\\n",
-    "    .schema(schema) \\\n",
-    "    .csv('fhvhv_tripdata_2021-02.csv')\n",
-    "\n",
-    "df = df.repartition(24)\n",
-    "\n",
-    "df.write.parquet('data/pq/fhvhv/2021/02/', compression=)"
+    "schema = types.StructType([\n",
+    "    types.StructField('dispatching_base_num', types.StringType(), True),\n",
+    "    types.StructField('pickup_datetime', types.TimestampType(), True),\n",
+    "    types.StructField('dropoff_datetime', types.TimestampType(), True),\n",
+    "    types.StructField('PULocationID', types.IntegerType(), True),\n",
+    "    types.StructField('DOLocationID', types.IntegerType(), True),\n",
+    "    types.StructField('SR_Flag', types.StringType(), True),\n",
+    "    types.StructField('Affiliated_base_number', types.StringType(), True),\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "58989b55",
+   "execution_count": 45,
+   "id": "e6676c2b-ed49-4ae0-9d34-df5596ab471b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./fhvhv/:\n",
+      "total 4.0K\n",
+      "drwxr-xr-x 3 pd2669 pd2669 4.0K Mar  2 10:16 2021\n",
+      "\n",
+      "./fhvhv/2021:\n",
+      "total 4.0K\n",
+      "drwxr-xr-x 2 pd2669 pd2669 4.0K Mar  2 10:17 01\n",
+      "\n",
+      "./fhvhv/2021/01:\n",
+      "total 226M\n",
+      "-rw-r--r-- 1 pd2669 pd2669    0 Mar  2 10:17 _SUCCESS\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:16 part-00000-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:16 part-00001-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:16 part-00002-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:16 part-00003-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:16 part-00004-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:16 part-00005-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00006-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00007-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00008-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00009-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00010-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00011-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00012-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00013-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00014-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00015-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00016-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00017-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00018-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00019-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00020-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00021-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00022-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n",
+      "-rw-r--r-- 1 pd2669 pd2669 9.4M Mar  2 10:17 part-00023-fee89bcd-ad50-497f-8503-2505b779b3af-c000.snappy.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -lhR ./fhvhv/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68bc8b72",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 0:>                                                          (0 + 1) / 1]\r",
-      "\r",
-      "                                                                                \r"
+      "24/03/02 21:01:41 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: dispatching_base_num, pickup_datetime, dropOff_datetime, PUlocationID, DOlocationID, SR_Flag, Affiliated_base_number\n",
+      " Schema: hvfhs_license_num, dispatching_base_num, pickup_datetime, dropoff_datetime, PULocationID, DOLocationID, SR_Flag\n",
+      "Expected: hvfhs_license_num but found: dispatching_base_num\n",
+      "CSV file: file:///home/pd2669/data-engineering-zoomcamp-gcp/05-batch/code/data/raw/fhv/fhv_tripdata_2019-10.csv.gz\n",
+      "[Stage 9:>    (0 + 1) / 1][Stage 10:>   (0 + 1) / 1][Stage 11:>   (0 + 0) / 1]\r"
      ]
     }
    ],
    "source": [
-    "df = spark.read.parquet('data/pq/fhvhv/2021/02/')"
+    "df = spark.read \\\n",
+    "    .option(\"header\", \"true\") \\\n",
+    "    .schema(schema) \\\n",
+    "    .csv('./data/raw/fhv/fhv_tripdata_2019-10.csv.gz')\n",
+    "\n",
+    "df = df.repartition(6)\n",
+    "\n",
+    "df.write.parquet('./data/pq/fhv/2019/10')"
    ]
   },
   {
@@ -668,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
