--- a/data-engineering-zoomcamp-gcp/05-batch/code/03_test.ipynb
+++ b/data-engineering-zoomcamp-gcp/05-batch/code/03_test.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bd55afbe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/python/pyspark/__init__.py'"
+       "'/home/pd2669/spark/spark-3.5.1-bin-hadoop3/python/pyspark/__init__.py'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "29f1cf4c",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cf6d80ad",
    "metadata": {},
    "outputs": [
@@ -51,15 +51,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/jars/spark-unsafe_2.12-3.0.3.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/02/15 22:22:51 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/02/28 18:49:52 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -72,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3f604529",
    "metadata": {},
    "outputs": [
@@ -80,16 +74,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-02-15 22:23:22--  https://s3.amazonaws.com/nyc-tlc/misc/taxi+_zone_lookup.csv\n",
-      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 54.231.196.8\n",
-      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|54.231.196.8|:443... connected.\n",
+      "--2024-02-28 18:49:57--  https://s3.amazonaws.com/nyc-tlc/misc/taxi+_zone_lookup.csv\n",
+      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.52.152, 52.216.216.72, 52.216.239.85, ...\n",
+      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.52.152|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 12322 (12K) [application/octet-stream]\n",
-      "Saving to: ‘taxi+_zone_lookup.csv’\n",
+      "Saving to: ‘taxi+_zone_lookup.csv.1’\n",
       "\n",
       "taxi+_zone_lookup.c 100%[===================>]  12.03K  --.-KB/s    in 0s      \n",
       "\n",
-      "2022-02-15 22:23:23 (114 MB/s) - ‘taxi+_zone_lookup.csv’ saved [12322/12322]\n",
+      "2024-02-28 18:49:57 (68.9 MB/s) - ‘taxi+_zone_lookup.csv.1’ saved [12322/12322]\n",
       "\n"
      ]
     }
@@ -100,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "12342345",
    "metadata": {},
    "outputs": [
@@ -108,26 +102,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"LocationID\",\"Borough\",\"Zone\",\"service_zone\"\r",
-      "\r\n",
-      "1,\"EWR\",\"Newark Airport\",\"EWR\"\r",
-      "\r\n",
-      "2,\"Queens\",\"Jamaica Bay\",\"Boro Zone\"\r",
-      "\r\n",
-      "3,\"Bronx\",\"Allerton/Pelham Gardens\",\"Boro Zone\"\r",
-      "\r\n",
-      "4,\"Manhattan\",\"Alphabet City\",\"Yellow Zone\"\r",
-      "\r\n",
-      "5,\"Staten Island\",\"Arden Heights\",\"Boro Zone\"\r",
-      "\r\n",
-      "6,\"Staten Island\",\"Arrochar/Fort Wadsworth\",\"Boro Zone\"\r",
-      "\r\n",
-      "7,\"Queens\",\"Astoria\",\"Boro Zone\"\r",
-      "\r\n",
-      "8,\"Queens\",\"Astoria Park\",\"Boro Zone\"\r",
-      "\r\n",
-      "9,\"Queens\",\"Auburndale\",\"Boro Zone\"\r",
-      "\r\n"
+      "\"LocationID\",\"Borough\",\"Zone\",\"service_zone\"\n",
+      "1,\"EWR\",\"Newark Airport\",\"EWR\"\n",
+      "2,\"Queens\",\"Jamaica Bay\",\"Boro Zone\"\n",
+      "3,\"Bronx\",\"Allerton/Pelham Gardens\",\"Boro Zone\"\n",
+      "4,\"Manhattan\",\"Alphabet City\",\"Yellow Zone\"\n",
+      "5,\"Staten Island\",\"Arden Heights\",\"Boro Zone\"\n",
+      "6,\"Staten Island\",\"Arrochar/Fort Wadsworth\",\"Boro Zone\"\n",
+      "7,\"Queens\",\"Astoria\",\"Boro Zone\"\n",
+      "8,\"Queens\",\"Astoria Park\",\"Boro Zone\"\n",
+      "9,\"Queens\",\"Auburndale\",\"Boro Zone\"\n"
      ]
     }
    ],
@@ -137,10 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "809464d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "df = spark.read \\\n",
     "    .option(\"header\", \"true\") \\\n",
@@ -149,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "e36dd996",
    "metadata": {},
    "outputs": [
@@ -192,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "cb547351",
    "metadata": {
     "scrolled": true
@@ -202,20 +194,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 4:>                                                          (0 + 1) / 1]\r",
-      "\r",
       "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "df.write.parquet('zones')"
+    "df.write.mode(\"overwrite\").parquet('zones')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "02fe2bdb",
    "metadata": {},
    "outputs": [
@@ -223,10 +212,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 28K\r\n",
-      "-rw-rw-r-- 1 alexey alexey 6.8K Feb 15 22:25 Untitled.ipynb\r\n",
-      "-rw-rw-r-- 1 alexey alexey  13K Aug 17  2016 taxi+_zone_lookup.csv\r\n",
-      "drwxr-xr-x 2 alexey alexey 4.0K Feb 15 22:25 zones\r\n"
+      "total 180K\n",
+      "-rw-rw-r-- 1 pd2669 pd2669  11K Feb 28 18:51 03_test.ipynb\n",
+      "-rw-rw-r-- 1 pd2669 pd2669  18K Feb 27 19:57 04_pyspark.ipynb\n",
+      "-rw-rw-r-- 1 pd2669 pd2669  33K Feb 27 19:57 05_taxi_schema.ipynb\n",
+      "-rw-rw-r-- 1 pd2669 pd2669 8.7K Feb 27 19:57 06_spark_sql.ipynb\n",
+      "-rw-rw-r-- 1 pd2669 pd2669 2.5K Feb 27 19:57 06_spark_sql.py\n",
+      "-rw-rw-r-- 1 pd2669 pd2669 2.6K Feb 27 19:57 06_spark_sql_big_query.py\n",
+      "-rw-rw-r-- 1 pd2669 pd2669 7.6K Feb 27 19:57 07_groupby_join.ipynb\n",
+      "-rw-rw-r-- 1 pd2669 pd2669  12K Feb 27 19:57 08_rdds.ipynb\n",
+      "-rw-rw-r-- 1 pd2669 pd2669 4.3K Feb 27 19:57 09_spark_gcs.ipynb\n",
+      "-rw-rw-r-- 1 pd2669 pd2669 3.0K Feb 27 19:57 cloud.md\n",
+      "-rwxrwxr-x 1 pd2669 pd2669  544 Feb 27 19:57 download_data.sh\n",
+      "-rw-rw-r-- 1 pd2669 pd2669  17K Feb 27 19:57 homework.ipynb\n",
+      "-rw-rw-r-- 1 pd2669 pd2669  13K Aug 17  2016 taxi+_zone_lookup.csv\n",
+      "-rw-rw-r-- 1 pd2669 pd2669  13K Aug 17  2016 taxi+_zone_lookup.csv.1\n",
+      "drwxr-xr-x 2 pd2669 pd2669 4.0K Feb 28 19:00 zones\n"
      ]
     }
    ],
@@ -259,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
